--- a/tasknity-web/package.json
+++ b/tasknity-web/package.json
@@ -11,10 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.4.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
